--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2231,17 +2231,19 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_desperate_times_desc:0 "We must take our last stand and defeat the german invader once and for all!"
  SOV_child_mobil:0 "Everyone fights!"
  SOV_child_mobil_desc:0 "Everyone must commit everything they have to fight off the invader, there is no going back!"
- SOV_murmansk_lend_lease:0 "Murmansk Lend Lease"
- SOV_murmansk_lend_lease_desc:0 "The port in Murmansk is one of the many ports that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
  SOV_pacific_lend_lease:0 "Pacific Lend Lease"
  SOV_pacific_lend_lease_desc:0 "The port in Vladivostok is one of the many ports that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
  SOV_arkangelsk_lend_lease:0 "Arkhangelsk Lend Lease"
  SOV_arkangelsk_lend_lease_desc:0 "The port in Arkhangelsk is one of the many ports that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
+ SOV_murmansk_lend_lease:0 "Murmansk Lend Lease"
+ SOV_murmansk_lend_lease_desc:0 "The port in Murmansk is one of the many ports that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
+ SOV_black_sea_lend_lease:0 "Black Sea Lend Lease"
+ SOV_black_sea_lend_lease_desc:0 "The port in Sevastopol is of the many ports that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
  SOV_persia_lend_lease:0 "Persian Gulf Lend Lease"
- SOV_persia_lend_lease_desc:0 "The Persian Gulf and access through Persia means that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
+ SOV_persia_lend_lease_desc:0 "The Persian Gulf and access through Persia is one of the many routes that our new Western Friends can use to supply us with the equipment necessary to drive out the fascist invaders."
  SOV_Beria_Partisans:0 "Beria's Partisans"
  SOV_Beria_Partisans_desc:0 "Beria has organized the resistance behind the lines, he is instilling the occupied Soviet citizens with a hatred for the fascist invaders. They will work behind the lines to disrupt the invaders by destroying supply lines, raiding bases and destroying infrastructure."
- SOV_Expanded_Partisans:0 "Establish the TsShPD"
+ SOV_Expanded_Partisans:0 "TsShPD"
  SOV_Expanded_Partisans_desc:0 "During this crucial moment, we have no patience for the incompentent bureaucrats in the NKVD. For better or for worse, we shall officially transfer responsibility of partisan operations to the military, integrating them into our armed forces. The Central Headquarters of the Partisan Movement (TsShPD) will task our comrades behind enemy lines, with destroying enemy communications, sabatoging supplies, and mercilessly cleansing our Motherland of the fascist invaders."
  SOV_STAVKA:0 "Stavka"
  SOV_STAVKA_desc:0 "The Soviet High Command, responsible for all offensive and defensive plans taken during the War."
