--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -106,6 +106,7 @@
  GRE_debt_desc:0 "Our country has defaulted on the intrest payments since anyone can remember, the outlook of ever paying back the pile of depth is very grim."
  GRE_metaxas_line:0 "Metaxas Line Doctrine"
  GRE_metaxas_line_desc:0 ""
+ SOV_Uranus_buildup:0 "Operation Uranus Buildup"
  SOV_consolidate2:0 "Consolidated State"
  JAP_supply:0 "Military Base Construction"
  JAP_Zaibatsu_Idea_Bonus:0 "Zaibatsus"
