Sir David level change

--- a/bicemodded/localisation/english/news_events_mod_l_english.yml
+++ b/bicemodded/localisation/english/news_events_mod_l_english.yml
@@ -80,7 +80,7 @@
  news.1302.t:0 "Soviet Major Offensive Campaign of 1943/1944"
  news.1302.d:0 "Operation Kutuzov was the first of the two counteroffensives launched by the Red Army as part of the Kursk Strategic Offensive Operation. It commenced on 12 July 1943, in the Central Russian Upland, against Army Group Center of the German Wehrmacht. The operation was named after General Mikhail Kutuzov, the Russian general credited with saving Russia from Napoleon during the French invasion of Russia in 1812. Operation Kutuzov was one of two large-scale Soviet operations launched as counteroffensives against Operation Citadel. The Operation began on 12 July and ended on 18 August 1943 with the capture of Orel and collapse of the Orel bulge."
  news.1302.a:0 "Good to know"
- news.1303.t:0 "Soviet Major Operation Launched: Bragation"
+ news.1303.t:0 "Soviet Major Operation Launched: Bagration"
  news.1303.d:0 "Operation Bagration was the codename for the Soviet 1944 Belorussian Strategic Offensive Operation, a military campaign fought between 23 June and 19 August 1944 in Soviet Byelorussia in the Eastern Front of World War II. The Soviet Union inflicted the biggest defeat in German military history by destroying 28 out of 34 divisions of Army Group Centre and completely shattered the German front line. It was the fifth deadliest campain on the European war scene, killing around 450,000 soldiers."
  news.1303.a:0 "Good to know"
  news.1304.t:0 "Germany Launches 1943 Summer Offensive"
