soviet fighter changes v1

--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -7199,7 +7199,7 @@
  yak_9:0 "Yak-9"
  yak_9_equipment:0 "Yak-9"
  yak_9_equipment_desc:0 "The Yakovlev 9 is a development of the Yak-7 fighter. It is a light fighter aircraft."
- yak_9_equipment_1:0 "Yakovlev 9"
+ yak_9_equipment_1:0 "Yakovlev Yak-9"
  yak_9_equipment_1_short:0 "Yak-9 Fighter"
  yak_9_equipment_1_desc:0 "The Yakovlev Yak-9 was a single-engine fighter aircraft. Fundamentally a lighter development of the Yak-7 with the same armament, it arrived at the front at the end of 1942. The Yak-9 had a lowered rear fuselage decking and all-around vision canopy. First production version had a Klimov M-105PF engine with 1180 HP and one 20mm ShVAK cannon one 12,7mm UBS machine. At low altitude in which it operated predominantly, the Yak-9 was faster and more maneuverable than its main foe, the Bf 109, but was far less well armed. A series of variants and improvements in performance and armament did not hamper the superb handling characteristics that allowed its pilots to excel at dog-fighting Its lighter airframe gave the new fighter a flexibility that previous models had lacked. The Yak-9 was the most mass-produced Soviet fighter of all time."
  yak_9_engine_upgrade:0 "Engine"
@@ -7210,7 +7210,7 @@
  yak_9_gun_upgrade_desc:0 "Replacement of the 12.7 mm machinegun with a 20 mm cannon. Later upgrades allow the installation of a third 20 mm cannon."
  yak_9_bfg_upgrade:0 "Medium Cannon"
  yak_9_bfg_upgrade_desc:0 "Installation of a 45 mm cannon. While this provides a massive increase in firepower, it also causes a noticable drop in performance."
- subtech_yak_9:0 "Yak 9"
+ subtech_yak_9:0 "Yak-9"
  subtech_yak_9_desc:0 "While the Yak-7 was a success, it was developed from an aircraft meant for training. Further development can refine the design."
  
  
