--- a/bicemodded/localisation/english/decisions_l_english.yml
+++ b/bicemodded/localisation/english/decisions_l_english.yml
@@ -78,3 +78,94 @@
  war_propaganda_bombing:0 "Bolster Spirits"
  war_propaganda_bombing_desc:0 "Though bombs fall all around us, our brave workers soldier on. It is by this spirit that we will be victorious."
  war_support_during_war:0 "War Support"
+ RAJ_population_decisions:0 "Rural Industrialization"
+ RAJ_industrialize_state:0 "Industrialize [FROM.GetName]"
+ RAJ_industrialize_state_desc:0 "Our nation is once again on the rise. Although the task is great, bringing rural areas into the modern era is sure to pay dividends in the future."
+ RAJ_industrialized_this_state:0 "§HRural areas already industrialized§!"
+ RAJ_reduce_agrarian_society_value_tooltip:0 "\n§H$RAJ_agrarian_society$§!\nRecruitable Population Factor: [?RAJ_agrarian_society_increment|+=%]\n"
+ RAJ_reduce_agrarian_society_value_2_tooltip:0 "\n§H$RAJ_agrarian_society$§!\nResearch and Factory Output Factor: §G+5%§!\n"
+ RAJ_reduce_agrarian_society_value_3_tooltip:0 "\n§H$RAJ_agrarian_society$§!\nResearch and Factory Output Factor: [?RAJ_agrarian_society_increment|+=%]\n"
+ war_propaganda_radio_industry:0 "Radio Propaganda"
+ war_propaganda_radio_industry_desc:0 "Technology has developed to a point where a significant proportion of our population has access to a home radio. State sponsored media is the perfect tool for stoking the war effort in the hearts of our people."
+ war_propaganda_film_industry:0 "[ROOT.GetImportOrDomesticFilmIndustry]"
+ war_propaganda_film_industry_desc:0 "[ROOT.GetImportOrDomesticFilmIndustryDesc]"
+ DOMESTIC_FILM_INDUSTRY:0 "Utilize Domestic Film Industry"
+ IMPORTED_FILM_INDUSTRY:0 "Import Allied Propaganda Films"
+ DOMESTIC_FILM_INDUSTRY_DESC:0 "The [ROOT.GetAdjective] film industry has developed significantly in the last decade. With a population starved for entertainment, we stand to benefit from a cinematic production designed to stir patriotic sentiment."
+ IMPORTED_FILM_INDUSTRY_DESC:0 "Our benefactors and allies are making strategic use of propaganda films. With a little investment, we could screen these productions around our own country in order to stir the war effort amongst our people."
+ ##Eng films for above
+ the_lion_has_wings:0 "The Lion Has Wings"
+ the_battle_of_london:0 "The Battle of London"
+ queens_messengers:0 "Queen's Messengers"
+ in_which_we_serve:0 "In Which We Serve"
+ the_volunteer:0 "The Volunteer"
+ fires_were_started:0 "Fires Were Started"
+ ##Aus
+ men_of_timor:0 "Men of Timor"
+ soldiers_without_uniform:0 "Soldiers Without Uniform"
+ mid_east:0 "Mid East"
+ ##Can
+ atlantic_patrol:0 "Atlantic Patrol"
+ front_of_steel:0 "Front of Steel"
+ home_front:0 "Home Front"
+ wings_of_youth:0 "Wings of Youth"
+ all_out_for_war:0 "All Out for War"
+ banshees_over_canada:0 "Banshees Over Canada"
+ ##RAJ_agrarian_society$§
+ the_planes_of_hindustan:0 "The Planes of Hindustan"
+ road_to_victory:0 "Road to Victory"
+ hes_in_the_navy:0 "He's in the Navy"
+ in_self_defence:0 "In Self Defence"
+ ##USA
+ women_in_defense:0 "Women in Defense"
+ winning_your_wings:0 "Winning Your Wings"
+ the_world_at_war:0 "The World at War"
+ mission_accomplished:0 "Mission Accomplished"
+ the_fleet_that_came_to_stay:0 "The Fleet That Came to Stay"
+ fury_in_the_pacific:0 "Fury in the Pacific"
+ fury_in_the_europe:0 "Fury"
+ its_your_war_too:0 "It's Your War Too"
+ time_in_munich:0 "Once Upon a Time in Munich"
+ french_schoolgirl:0 "French Schoolgirls"
+ ##Holland/Belgium
+ belguique_toujours:0 "Belgique Toujours"
+ high_stakes_in_the_east:0 "High Stakes in the East"
+ glorious_colours:0 "Glorious Colours"
+ litte_belgium:0 "Little Belgium"
+ ##Sov
+ for_the_front:0 "For the Front"
+ the_peoples_avengers:0 "The People's Avengers"
+ day_of_war:0 "Day of War"
+ film_motherland:0 "Motherland"
+ sons_of_the_motherland:0 "Sons of the Motherland"
+ moscow_strikes_back:0 "Moscow Strikes Back"
+ ##Ger
+ fluchtlinge:0 "Fluchtlinge"
+ film_bismarck:0 "Bismarck"
+ wunschkonzert:0 "Wunschkonzert"
+ anschlag_auf_baku:0 "Anschlag Auf Baku"
+ die_entlassung:0 "Die Entlassung"
+ besatzung_dora:0 "Besatzung Dora"
+ opfergang:0 "Opfergang"
+ panorama:0 "Panorama"
+ kolberg:0 "Kolberg"
+ erika:0 "Erika in Russland"
+ asser_der_luft:0 "Asser der Luft"
+ ##Japan
+ monkey_king:0 "Monkey King"
+ genghis_khan:0 "Genghis Khan"
+ vow_in_the_desert:0 "Vow in the Desert"
+ song_of_the_white_orchid:0 "Song of the White Orchid"
+ five_scouts:0 "Five Scouts"
+ fire_on_that_flag:0 "Fire on That Flag!"
+ ##Ita (hard to find it seems)
+ condottieri:0 "Condottieri"
+ scipio_africano:0 "Scipio Africano"
+ the_man_with_the_cross:0 "The Man With the Cross"
+ ##Generic
+ our_war:0 "Our War"
+ the_war_for_our_existence:0 "The War for our Existence"
+ war_in_the_skies:0 "War in the Skies"
+ flags_raised:0 "Flags Raised"
+ the_day_of_sacrifice:0 "The Day of Sacrifice"
+ blood_and_toil:0 "Blood and Toil"
