--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -2225,9 +2225,9 @@
  political.32.a:0 "Listen to what they say, at least we can hope they stop their silly display."
  political.32.b:0 "This must come to and end, rough up their leaders!"
  
- political.33.t:0 "Heat Wave"
- political.33.d:0 "Heat Wave strikes and it is one of the most severe in modern history according to our records. Farmers say the harvests will surely be destroyed if the drought goes on like this."
- political.33.a:0 "Oh dear..."
+ political.33.t:0 "[ROOT.GetCountryAppropriateFilmProduction]"
+ political.33.desc:0 "In an effort to improve public opinion towards the war effort, our propaganda ministers selected the exceptional cinematic production '[ROOT.GetCountryAppropriateFilmProduction]' - a sublime viewing experience with a strong patriotic sentiment - for screening across the country.\n\nWe hope this heralds the beginning of a long and storied tradition for our patriotic film industry - the results have been excellent so far."
+ political.33.a:0 "A masterpiece."
  
  political.34.t:0 "People demand justice!"
  political.34.d:0 "People throughout the country demand to know why we have not declared war yet! After a series of newspaper articles portraying an enemy country as a vile aggressor and rumors of foreign diplomats burning our flag the protestors have besieged that countries embassy. There are also cries for war from protestors in other cities, it might not matter much which country we attack but the people demand blood!"
