--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -6460,6 +6460,17 @@ portugal.30.d:0 "We just got a visit from the Portuguese foreign minister, who t
  RAJ_colonial_elite_desc:0 "The British colonial elite have also been stricken hard by the great depression, we need to inject more money into their country clubs where they can solve our problems, train cavalry charge and play polo."
  RAJ_air_navy:0 "Coordinate Naval Aviation"
  RAJ_air_navy_desc:0 ""
+ RAJ_administrative_oversight:0 "Administrative Oversight"
+ RAJ_administrative_oversight_desc:0 "With industrial corruption dealt with and our independence secured, it is time to bring local administrators under the wing of government. While it may seem a difficult task, the tribal leaders and local officials hold sway over great swathes of our population. They must be incorporated for the good of our country in these dark times."
+ RAJ_enable_local_industrialization:0 "Enables §HRural Industrialization§! decisions, allowing for modification of the §HAgrarian Society§! Spirit."
+ RAJ_land_clearance:0 "Land Clearance"
+ RAJ_land_clearance_desc:0 "With increased influence channeled through local leaders, we are able to make better use of our natural resources and land in the name of the state."
+ RAJ_workforce_integration:0 "Workforce Integration"
+ RAJ_workforce_integration_desc:0 "Using the local power of regional and tribal leaders, we are able to funnel otherwise wasted resources into improvement programmes in rural areas."
+ RAJ_land_clearance_effect_tt:0 "§H$RAJ_population_decisions$§! decisions now add §G1§! Building Slot.\n$apply_integration_effects_retroactively$"
+ RAJ_integration_tooltip:0 "§H$RAJ_population_decisions$§! decisions now add:"
+ RAJ_integration_tooltip_post:0 "$apply_integration_effects_retroactively$"
+ apply_integration_effects_retroactively:0 "\nThis will be applied §Hretroactively§! to all states upon which this decision has been taken previously."
 
  continuous_naval_production:0 "Naval Production"
  continuous_naval_production_desc:0 "By focusing resources on our shipyards and exempting skilled shipbuilders from military service, we can dramatically reduce production time for ships."
