--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -2828,9 +2828,9 @@
  RAJ_all_india_forward_bloc_communism:0 "All India Forward Bloc"
  RAJ_all_india_forward_bloc_fascism:0 "All India Forward Bloc"
  RAJ_agrarian_society:0 "Agrarian Society"
- RAJ_agrarian_society_desc:0 "Too large portion of our total production is in agriculture, more advanced economies can sell goods that are in much higher demand than grain and livestock."
- RAJ_agrarian_society_2:0 "Agrarian Society"
- RAJ_agrarian_society_2_desc:0 "Too large portion of our total production is in agriculture, more advanced economies can sell goods that are in much higher demand than grain and livestock."
+ RAJ_agrarian_society_desc:1 "The local administrators believe that their agrarian lifestyle has made a large part of the Indian population simply unfit for military service or warfare of any kind. They maintain that we should only recruit from the so-called "martial tribes". This belief is so wide-spread and well-entreched that it will require at least a generation, or significant rural investment to overcome."
+ RAJ_agrarian_society_dynamic:0 "$RAJ_agrarian_society$"
+ RAJ_agrarian_society_dynamic_desc:0 "$RAJ_agrarian_society_desc$"
  RAJ_tata_steel:0 "Tata Steel"
  RAJ_tata_steel_desc:0 "Tata Steel is on the path to becoming the largest steel manufacturer in the Empire. Greater production will further fuel the modernization of India."
  RAJ_yashdip_sakhra:0 "Yashdip Sakhra"
