--- a/bicemodded/localisation/english/triggers_l_english.yml
+++ b/bicemodded/localisation/english/triggers_l_english.yml
@@ -740,8 +740,7 @@
  TRIGGER_IS_FEMALE_LEADER_COUNTRY:0 "Country leader is female"
  TRIGGER_IS_NOT_OPERATION:0 "Is not operation of $OPERATION|H$"
  TRIGGER_IS_OPERATION:0 "Is operation of $OPERATION|H$"
- TRIGGER_NUM_RESEARCHED_TECHS_MORE_THAN:0 "Has more than $AMOUNT|H$ researched technologies"
- TRIGGER_NUM_RESEARCHED_TECHS_LESS_THAN:0 "Has less than $AMOUNT|H$ researched technologies"
+ TRIGGER_NUM_RESEARCHED_TECHS:0 "researched technologies"
  owns_or_subject_of_tt:1 "is owned by §Y[ROOT.GetFlag] [ROOT.GetNameDef]§! or a §YSubject§!\n"
  owns_or_subject_of_tt_NOT:1 "is NOT owned by §Y[ROOT.GetFlag] [ROOT.GetNameDef]§! or a §YSubject§!\n"
  controls_or_subject_of_tt:0 "is controlled by §Y[ROOT.GetFlag] [ROOT.GetNameDef]§! or a §YSubject§!\n"
@@ -873,6 +872,8 @@
  TRIGGER_PC_DOES_STATE_NOT_STACK_DISMANTLED:0 "State did not get stacked with dismantle in the peace conference"
  TRIGGER_PC_DOES_STATE_STACK_DEMILITARIZED:0 "State got stacked with demilitarize in the peace conference"
  TRIGGER_PC_DOES_STATE_NOT_STACK_DEMILITARIZED:0 "State did not get stacked demilitarize in the peace conference"
+ TRIGGER_PC_IS_NOT_CLAIMED_AND_TAKEN_BY: "Is not claimed and taken by $COUNTRY$" ##NEVER DISPLAYED OUTSIDE DEBUG
+ TRIGGER_PC_IS_CLAIMED_AND_TAKEN_BY: "Is claimed and taken by $COUNTRY$" ##NEVER DISPLAYED OUTSIDE DEBUG
 
  BOMBING_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Bombing"
  CASUALTIES_WAR_SUPPORT_TRIGGER:0 "War Support Malus from Casualties"
