USA focus tree fixes

--- a/bicemodded/localisation/english/dod_focus_l_english.yml
+++ b/bicemodded/localisation/english/dod_focus_l_english.yml
@@ -412,7 +412,7 @@
  ROM_coastal_defense_navy:0 "Coastal Defense Navy"
  ROM_coastal_defense_navy_desc:0 "With our limited resources, we can strive for no more than to secure our shores. All effort must be directed towards this goal."
  ROM_coastal_defense_ships:0 "Coastal Defense Ships"
- ROM_coastal_defense_ships_tech_tt:0 "Enables §HCoastal Defense Ships§!\n§HHeavy Cruisers§!\n    Armor: §G+20%§!\n    Naval Firepower: §G+10%§!\n    Production Cost: §G-10%§!"
+ ROM_coastal_defense_ships_tech_tt:0 "Enables §HCoastal Defense Ships§!\n§HHeavy Cruisers§!\n    Armor: §G+20%§!\n    Naval Firepower: §G+10%§!\n"
  ROM_coastal_defense_ships_desc:0 "New designs will have to be created for ships that excel at coastal defense duties."
  ROM_coastal_defense_fortifications:0 "Black Sea Fortifications"
  ROM_coastal_defense_fortifications_desc:0 "We need to make sure the enemy cannot land on the wide open beaches in our backyard!"
