--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -8317,6 +8317,8 @@ BUL_Monarch_Speech:0 "Monarch Speech"
  confirm_cancel_national_focus_progress_loss_singular:0 "You will lose §R$LOST_DAYS$§! day of progress."
  confirm_cancel_national_focus_progress_loss_plural:0 "You will lose §R$LOST_DAYS$§! days of progress."
  confirm_cancel_national_focus_desc:0 "Are you sure you want to cancel the national focus §H$FOCUS_NAME$§!?"
+ ROM_white_squadron_focus:0 "The White Squadron"
+ ROM_white_squadron_focus_desc:0 "The White squadron, proposed by Marina Ştirbei - a talented pilot of noble birth - is a service of air ambulances piloted exclusively by women. Merely the notion that rescue might be close at hand could keep our soldiers in high spirits."
  
 
  
