--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -5719,6 +5719,11 @@
  ALREADY_HAS_ADVISOR_WITH_TRAIT:0 "There is already an appointed advisor with this trait."
  POL_investments_monarchist:0 "Monarchist Investments"
  CHANGE_ADVISOR:1 "\nYou can replace this advisor by clicking here and selecting a replacement."
+ RAJ_industrialized_personnel:0 "Integrated Rural Workforce"
+ ROM_white_squadron:0 "White Squadron"
+ ROM_white_squadron_desc:0 "The White squadron is a service of air ambulances piloted exclusively by women. Merely the notion that rescue might be close at hand keeps our soldiers in high spirits."
+ MAN_hoankyoku_idea:0 "Hoankyoku"
+ MAN_hoankyoku_idea_desc:0 "A secretive organization dedicated to dealing with undesired elements in society."
  
  RAJ_3:0 "Nawab Chhatari"
  
